fix flex overflow hidden issue in RepeatedScheduleMaintenanceForm and RegionForm

--- a/apps/infra/src/components/organism/RepeatedScheduleMaintenanceForm/RepeatedScheduleMaintenance.scss
+++ b/apps/infra/src/components/organism/RepeatedScheduleMaintenanceForm/RepeatedScheduleMaintenance.scss
@@ -5,8 +5,4 @@
 
 .repeated-schedule-maintenance-form {
   padding-bottom: 15rem;
-
-  .flex-item {
-    overflow: visible;
-  }
 }
